# AGATI

./: .gitignore  .pre-commit-config.yaml  AGATI.py  DataReader.py  LICENSE  README.md  Tracker.py  TrackingObjects.py  dlc_script.py  draw.py  labeled_vid.py  nop10DeepCut_resnet50_vocal_foldAug7shuffle1_1030000.h5  nop1DeepCut_resnet50_vocalJun10shuffle1_1030000.h5  nop1DeepCut_resnet50_vocal_paperMay23shuffle1_900000.h5  nop4DeepCut_resnet50_vocalJun10shuffle1_1030000.h5  pyproject.toml  requirements.txt  setup.cfg  tracker.py  tracker_tests.py  uvfp1DeepCut_resnet50_vocal_paperMay23shuffle1_900000.h5  video_data.csv  vocal0DeepCut_resnet50_vocal_strobeMay8shuffle1_200000.h5  vocal0DeepCut_resnet50_vocal_strobeMay8shuffle1_400000.h5  vocal1DeepCut_resnet50_vocalJun10shuffle1_1030000.h5  vocal1DeepCut_resnet50_vocalMay13shuffle1_1030000.h5  vocal1DeepCut_resnet50_vocalMay13shuffle1_1030000includingmetadata.pickle  vocal1DeepCut_resnet50_vocal_paperMay23shuffle1_900000.h5  vocal1DeepCut_resnet50_vocal_strobeMay8shuffle1_200000.h5  vocal1DeepCut_resnet50_vocal_strobeMay8shuffle1_400000.h5  vocal2DeepCut_resnet50_vocalMay13shuffle1_1030000.h5  vocal2DeepCut_resnet50_vocal_strobeMay8shuffle1_200000.h5  vocal2DeepCut_resnet50_vocal_strobeMay8shuffle1_400000.h5  vocal3DeepCut_resnet50_vocalMay13shuffle1_1030000.h5  vocal3DeepCut_resnet50_vocal_strobeMay8shuffle1_200000.h5  vocal3DeepCut_resnet50_vocal_strobeMay8shuffle1_400000.h5  vocalDeepCut_resnet50_vocalJun10shuffle1_1030000.h5  vocalDeepCut_resnet50_vocalMay13shuffle1_1030000.h5  (+7 more)
agati/: agati.py  analysis.py  draw.py  (+1 more)
(+363 files in other folders)
