[metadata]
name = agati
author = Nat Adamian
author_email = nat.adamian@meei.harvard.edu
description = Anterior vocal fold angle of opening tracking from laryngoscopy video using DeepLabCut.
long_description = file: README.md
long_description_content_type = text/markdownclassifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
url = https://github.com/SurgicalPhotonics/agati
[options]
packages = find:
python_requires = >=3.7
package_dir=
    =.
setup_requires = setuptools_scm
install_requires =
    dlc-generic-analysis>=0.0.1rc5
    numpy~=1.20.0
    opencv-python-headless>=4.5.4.60
    scipy>=1.7.3

[options.extras_require]
gui =
    dlc-generic-analysis[gui]>=0.0.1rc5

[options.entry_points]
console_scripts =
    agati = agati:__main__